--- a/md/2345.md
+++ b/md/2345.md
@@ -1,8 +1,8 @@
 
 
-[https://zhuanlan.zhihu.com/p/256170072](https://zhuanlan.zhihu.com/p/256170072)
+## [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
 
-彻底删除2345安全卫士！终止2345Safe CenterSvc服务！
+
 
 
 ------------------------------------------------------
