--- a/md/2345.md
+++ b/md/2345.md
@@ -1,6 +1,6 @@
 
 
-## [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
+### [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
 
 
 
@@ -23,9 +23,8 @@
 
 ------------------------------
 
-[https://jingyan.baidu.com/article/d8072ac45b596eec95cefda0.html](https://jingyan.baidu.com/article/d8072ac45b596eec95cefda0.html)
+### [浏览器主页恶意篡改为2345导航后无法更改怎么办](https://jingyan.baidu.com/article/d8072ac45b596eec95cefda0.html)
 
-浏览器主页恶意篡改为2345导航后无法更改怎么办
 
 
 按WIN+R，打开运行窗口，然后输入regedit后，直接敲回车键
