--- a/md/2345.md
+++ b/md/2345.md
@@ -3,7 +3,13 @@
 ### [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
 
 
+打开任务管理器，查看CPU使用率曲线。一会儿一个尖峰，高达70%多；有网友说还会占用自己的宽带，不知道是在传输什么数据，细思极恐呀。不会是被当肉鸡了吧。还有的人CPU直接爆满，风扇呼呼地转。
 
+打开进程，有两个陌生的进程2345安全中心-主动防御和2345安全中心-XXXX；这两个进程都指向2345Safe CenterSvc服务。打开服务，想着直接给停止吧。对不起，停不下来。可以禁用，但是每次重启都是自动运行。牛逼不牛逼，你就说吧。打开程序卸载，也找不到任何2345的东西，厉害吧。 
+
+直接搜索2345，找到相关的文件夹，在Roaming文件夹下有2345DomainMon，GameHall_2345，Helper_2345，MiniPage_2345，Shield_2345Explorer等。我尝试直接删除，提示我依然没有权限。
+
+无奈只能从注册表入手了，随便一找就有很多和2345安全卫士相关的注册表信息，网友说可以全部删除；但是我的注册表有许多键值删除不了，提示删除项出错；不允许我修改和删除，理由依然是2345Safe CenterSvc这个服务正在使用；有些注册表删了之后，重启机器又死灰复燃了。真头疼。捣鼓了一晚上，也没有什么结果。
 
 ------------------------------------------------------
 
