--- a/md/2345.md
+++ b/md/2345.md
@@ -1,4 +1,12 @@
 
+2345绝对的垃圾软件，这样的公司能上市，绝对是中国IT行业的耻辱！2345不仅乱修改浏览器的首页，不断弹窗广告页面，还每隔一段时间偷偷的给电脑装了一大堆垃圾软件群，这几个垃圾软件不时的弹窗广告，而且这些垃圾软件一旦在电脑扎根，就赶都赶不走，是无法通过Windows自身来删除的（需要下载流氓软件始祖360管家来卸载这些垃圾软件）。2345的创始人和高管昧良心赚黑心钱，迟早会有报应。
+
+作者：药师
+链接：https://www.zhihu.com/question/35188509/answer/1266544765
+
+衷心祝愿2345早日倒闭，相比之下360，hao123其他的都是良民
+
+---------------------------------------------------------------------------------------
 
 ### [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
 
