--- a/md/2345.md
+++ b/md/2345.md
@@ -6,6 +6,8 @@
 
 衷心祝愿2345早日倒闭，相比之下360，hao123其他的都是良民
 
+2345网络集团最大股东，上海交大教育。上海交大教育最大股东上海新南洋，上海新南洋最大股东上海国资委。懂了吧？
+
 ---------------------------------------------------------------------------------------
 
 ### [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
