--- a/md/2345.md
+++ b/md/2345.md
@@ -62,3 +62,52 @@
 再次单击main，找到右侧窗口的start page
 
 最后，为了防止再次被篡改，一定要参照上面的第7步，将它的完全控制权限去掉
+
+-----------------------------------------------------
+
+用hosts 屏敝 2345 ,具体列表
+
+127.0.0.1    2345.com
+127.0.0.1    www.2345.com
+127.0.0.1    m.2345.com
+127.0.0.1    pc.2345.com
+127.0.0.1    mobi.2345.com
+127.0.0.1    api.2345.com
+127.0.0.1    news.2345.com
+127.0.0.1    browser.2345.com
+127.0.0.1    www.2345.cc
+127.0.0.1    2345.cc
+127.0.0.1    ie.2345.com
+127.0.0.1    ie.2345.cc
+127.0.0.1    helper.2345.com
+127.0.0.1    helper.2345.cc
+127.0.0.1    update.helper.2345.com
+127.0.0.1    update.helper.2345.cc
+127.0.0.1    t.helper.2345.com
+127.0.0.1    t.helper.2345.cc
+127.0.0.1    download.2345.com
+127.0.0.1    download.2345.cc
+127.0.0.1    safe.2345.com
+127.0.0.1    safe.2345.cc
+127.0.0.1    pcsafe.2345.com
+127.0.0.1    pcsafe.2345.cc
+127.0.0.1    2345helper.com
+127.0.0.1    2345helper.cc
+127.0.0.1    2345soft.com
+127.0.0.1    2345soft.cc
+127.0.0.1    2345explorer.com
+127.0.0.1    2345explorer.cc
+
+用hosts 屏敝百度推广 ,具体列表
+
+127.0.0.1    pos.baidu.com
+127.0.0.1    eclick.baidu.com
+127.0.0.1     crs.baidu.com
+127.0.0.1     hm.baidu.com
+127.0.0.1     drmcmm.baidu.com
+127.0.0.1     cpro.baidu.com
+
+
+
+
+
