--- a/md/2345.md
+++ b/md/2345.md
@@ -103,12 +103,9 @@
 
 用hosts 屏敝百度推广 ,具体列表
 
-    127.0.0.1     pos.baidu.com
-    127.0.0.1     eclick.baidu.com
-    127.0.0.1     crs.baidu.com
-    127.0.0.1     hm.baidu.com
-    127.0.0.1     drmcmm.baidu.com
-    127.0.0.1     cpro.baidu.com
+    127.0.0.1    pos.baidu.com
+    127.0.0.1    fclick.baidu.com
+    127.0.0.1    hm.baidu.com
 
 
 
