--- a/md/2345.md
+++ b/md/2345.md
@@ -107,7 +107,12 @@
     127.0.0.1    fclick.baidu.com
     127.0.0.1    hm.baidu.com
 
+360 Ad
 
+    127.0.0.1   qhmsg.com
+    127.0.0.1   lianmeng.360.cn
+    127.0.0.1   mediav.com
+    127.0.0.1   nzwgs.com
 
 
 
