--- a/md/2345.md
+++ b/md/2345.md
@@ -106,6 +106,7 @@
     127.0.0.1    pos.baidu.com
     127.0.0.1    fclick.baidu.com
     127.0.0.1    hm.baidu.com
+    127.0.0.1    miao.baidu.com
 
 360 Ad
 
