--- a/md/360.md
+++ b/md/360.md
@@ -47,4 +47,5 @@ https://zhuanlan.zhihu.com/p/1972232947278025818
 https://weibo.com/u/1708942053
 吾爱破解
 https://www.52pojie.cn
+看雪论坛
 https://bbs.kanxue.com
