--- a/md/360.md
+++ b/md/360.md
@@ -9,7 +9,11 @@ https://www.huorong.cn/document/tech/vir_report/1858
 https://zhuanlan.zhihu.com/p/1972232947278025818
 被流氓软件抛弃的7种用户，火绒曝光鲁大师流量劫持黑幕  2025-11-13
 
+### [火绒揭秘，访问过‘红衣教主’周鸿祎微博的用户，不会被流氓软件收割    2025-11-14](https://zhuanlan.zhihu.com/p/1972640053365856195)
 
+### [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
+
+### [彻底删除2345安全卫士！终止2345Safe CenterSvc服务！](https://zhuanlan.zhihu.com/p/256170072)
 ----------------------------------------------------------------
 
 火绒的报告里，列出了几种他们不碰的用户。
