--- a/md/360.md
+++ b/md/360.md
@@ -37,6 +37,27 @@
 给这种人弹窗，就跟在派出所门口卖盗版碟一样，属于没屎找屎。
 一次简单的微博访问，等于在你的数字脑门上刻了几个大字：自己人，别开枪。
 
+---------------------------------------------------------
+
+工作域名，需要屏蔽:
+
+    鲁大师
+    天津杏仁桉科技域名"apkevery.com"
+
+    小鸟壁纸
+    "成都盈畅时代文化传播有限公司"的域名"shanhutech.cn"
+
+
+
+访问网址：匹配历史记录中访问网址中是否存在以下内容，若存在则会选择不推广。
+
+    技术类网址：例如 bbs.pediy.com（看雪）、www.52pojie.cn（吾爱破解）等网址。
+
+    投诉类网址：例如 www.12315.cn（全国 12315 平台）、www.bj315.org（北京市消费者协会）等网址。
+
+    传播平台类网址：例如 weibo.com（微博） 与 www.zhihu.com（知乎）等网址。
+
+    值得注意的是，在劫持浏览器的过程中，会对用户是否访问过周鸿祎的微博进行检测，若检测结果为已访问，则不会进行推广。
 
 
 
